# starship-poc

./: CONTEXT.md  Cargo.toml  README.md  dhat-heap.json
.github/workflows/: benchmark.yml  ci.yml  code_style.yml  codspeed.yml
benches/: Cargo.toml  bench.rs
benches/benches/: starship_bench.rs
benches/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  lib.rs  module.rs  prompt.rs  render.rs  socket.rs  styled.rs  tracing.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/benches/: full_flow.rs  prompt.rs
crates/daemon/src/: config.rs  lib.rs  main.rs
crates/daemon/src/config/: mod.rs  nerd_font.rs  style.rs
crates/plugin-core/: Cargo.toml
crates/plugin-core/src/: bitwise.rs  guest.rs  lib.rs  types.rs
crates/plugin-macros/: Cargo.toml
crates/plugin-macros/src/: lib.rs
crates/plugin-macros/tests/: export_plugin.rs
crates/plugin-macros/tests/cases/: fail_missing_name.rs  fail_missing_name.stderr  fail_missing_trait.stderr  pass_basic.rs  pass_vcs_basic.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: host.rs  lib.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: exec_cache.rs  lib.rs  plugin.rs
crates/runtime/src/config/: mod.rs  nerd_font.rs  style.rs
crates/starship/: Cargo.toml
crates/starship/src/: lib.rs  main.rs  render.rs
dev/: config.lua
dev/bench/: data.js
docs/adr/: 0001-vcs-plugins-parallel-trait.md  0002-vcs-detection-vs-root-resolution.md  0003-vcs-resolution-shadows.md  0004-plugin-cache-namespace.md
plugins/nodejs/: Cargo.toml
plugins/nodejs/src/: lib.rs
plugins/test-harness/: Cargo.toml
plugins/test-harness/src/: lib.rs
plugins/vcs-test-harness/: Cargo.toml
plugins/vcs-test-harness/src/: lib.rs
src/: cache.rs  config.rs  context.rs  error.rs  errors.rs  formatter.rs  git.rs  lib.rs  main.rs  module.rs  modules.rs  prompt.rs  style.rs  vcs.rs
src/module/: directory.rs  mod.rs
src/modules/: character.rs  directory.rs  mod.rs  module.rs  newline.rs  node.rs  rust.rs
src/vcs/: git.rs  mercurial.rs  mod.rs
types/: starship.d.lua
