[workspace]
resolver = "2"
members = ["crates/common", "crates/daemon", "crates/starship"]

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

starship-common = { path = "crates/common" }

[profile.release]
debug = 1

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
