[workspace]
resolver = "2"
members = ["crates/*", "benches"]

[workspace.dependencies]
anstyle = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-profile = "0.10"
serde = { version = "1.0", features = ["derive"] }

starship-common = { path = "crates/common" }
starship-daemon = { path = "crates/daemon" }
starship = { path = "crates/starship" }
starship-runtime = { path = "crates/runtime" }

[profile.release]
debug = 1

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing-errors-doc = { level = "allow" }
