[package]
name = "starship-bench"
version = "0.0.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace = true }
divan = { version = "4", package = "codspeed-divan-compat" }
starship = { workspace = true }
starship-common = { workspace = true }
starship-daemon = { workspace = true }
starship-runtime = { workspace = true }

[[bench]]
name = "starship_bench"
harness = false
