[package]
name = "starship-common"
description = "Common code for the Starship prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-profile = { workspace = true }

[lints]
workspace = true
