[package]
name = "starship-daemon"
description = "The daemon for the Starship prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
starship-common = { workspace = true }
mlua = { version = "0.11", features = ["luau", "serde", "error-send", "send"] }

[lints]
workspace = true
