[package]
name = "starship-daemon"
description = "The daemon for the Starship prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0"
starship-common = { workspace = true }
starship-runtime = { workspace = true }

[lints]
workspace = true
