[package]
name = "starship-runtime"
description = "The core runtime for the Starship prompt (Lua config, rendering)"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
starship-common = { workspace = true }
mlua = { version = "0.11", features = ["luau", "serde", "error-send", "send"] }
phf = "0.11"

[lints]
workspace = true

[build-dependencies]
phf_codegen = "0.11"
serde_json = "1.0"
