[package]
name = "starship-runtime"
description = "The core runtime for the Starship prompt (Lua config, rendering)"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
starship-common = { workspace = true }
mlua = { version = "0.11", features = ["luau", "serde", "error-send"] }
phf = "0.11"
wasmtime = "43.0.0"
starship-plugin-core = { version = "0.0.0", path = "../plugin-core" }

[lints]
workspace = true

[build-dependencies]
phf_codegen = "0.11"
serde_json = "1.0"

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3.26.0"
