[package]
name = "starship"
description = "The CLI for the Starship prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
starship-common = { workspace = true }
serde_json = "1.0"

[lints]
workspace = true